[package]
name = "arbtt-capture-wl"
version = "0.1.0"
edition = "2021"
description = "arbtt capture for niri (and sway) Wayland compositors"
license = "GPL-3.0-only"
authors = ["Franz Geffke <mail@gofranz.com>"]

[dependencies]
niri-ipc = "25.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ctrlc = "3"
