[package]
name = "arbtt-capture-wl"
version = "0.1.1"
edition = "2021"
description = "arbtt capture for niri (and sway) Wayland compositors"
license = "GPL-3.0-only"
authors = ["Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/arbtt-capture-wl"

[[bin]]
name = "arbtt-capture-wl"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Franz Geffke <mail@gofranz.com>"
section = "utils"
assets = [
    ["target/release/arbtt-capture-wl", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/arbtt-capture-wl", dest = "/usr/bin/arbtt-capture-wl", mode = "755" },
]

[dependencies]
niri-ipc = "25.11"
swayipc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ctrlc = "3"
